# C-_assignments

./: CMakeLists.txt  car.cpp  car.h  lorry.cpp  lorry.h  main.cpp
